k8s/overlays/local/patches/frontend-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: IfNotPresent
